# matrix-rocketchat

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  install.sh
assets/: cli.yaml  translations.yaml
config/: config.yaml.sample  config.yml.sample  matrix_rocketchat_registration.yaml.sample
doc/: reset_appliation_service.md  setup.md
migrations/20161204155847_create_users/: down.sql  up.sql
migrations/20161204173030_create_rooms/: up.sql
migrations/20161204173455_create_users_in_rooms/: down.sql  up.sql
migrations/20170121174542_create_rocketchat_servers/: down.sql  up.sql
migrations/20170121180854_create_users_on_rocketchat_servers/: down.sql  up.sql
src/matrix-rocketchat/: config.rs  errors.rs  i18n.rs  lib.rs  log.rs  server.rs
src/matrix-rocketchat/api/: mod.rs  rest_api.rs
src/matrix-rocketchat/api/matrix/: .mod.rs.rustfmt  mod.rs  r0.rs
src/matrix-rocketchat/api/rocketchat/: mod.rs  v1.rs
src/matrix-rocketchat/db/: connection_pool.rs  mod.rs  rocketchat_server.rs  room.rs  schema.rs  user.rs  user_in_room.rs  user_on_rocketchat_server.rs
src/matrix-rocketchat/handlers/: error_notifier.rs  mod.rs  transactions.rs  welcome.rs
src/matrix-rocketchat/handlers/events/: command_handler.rs  dispatcher.rs  event_dispatcher.rs  forwarder.rs  membership_handler.rs  message_handler.rs  mod.rs  room_creator.rs  room_handler.rs
src/matrix-rocketchat/handlers/iron/: mod.rs  rocketchat.rs  rocketchat_login.rs  transactions.rs  welcome.rs
src/matrix-rocketchat/handlers/matrix/: command_handler.rs  dispatcher.rs  forwarder.rs  membership_handler.rs  message_handler.rs  mod.rs
src/matrix-rocketchat/handlers/rocketchat/: forwarder.rs  login.rs  mod.rs  virtual_user_handler.rs
src/matrix-rocketchat/middleware/: matrix.rs  mod.rs  rocketchat.rs
src/matrix-rocketchat/models/: channel.rs  connection_pool.rs  events.rs  mod.rs  rocketchat_room.rs  rocketchat_server.rs  room.rs  schema.rs  user_on_rocketchat_server.rs  virtual_user.rs
tests/: admin_commands.rs  admin_commands_bridge.rs  admin_commands_connect.rs  admin_commands_help.rs  admin_commands_list.rs  admin_commands_login.rs  admin_commands_unbridge.rs  admin_commands_unkown.rs  admin_room.rs  config.rs  errors.rs  event_dispatcher.rs  forward_matrix_direct_message_to_rocketchat.rs  forward_matrix_to_rocketchat.rs  forward_rocketchat_channel_to_matrix.rs  forward_rocketchat_direct_message_to_matrix.rs  forward_rocketchat_to_matrix.rs  request_authentication.rs  rest_api.rs  rocketchat.rs  startup.rs  transactions.rs  welcome.rs
tests/matrix-rocketchat-test/: Cargo.toml  api.rs  handlers.rs  helpers.rs  lib.rs  message_forwarder.rs
