[package]
name = "matrix_rocketchat"
version = "0.1.0"
authors = ["Andreas Brönnimann"]
license = "MIT OR Apache-2.0"

[lib]
name = "matrix_rocketchat"
path = "src/matrix-rocketchat/lib.rs"

[dependencies]
clap = "2.2"
diesel = { version = "1.0", default-features = false, features = ["sqlite"] }
diesel_migrations = { version = "1.0", default-features = false, features = ["sqlite"] }
error-chain = "0.11"
iron = "0.6"
lazy_static = "1.0"
num_cpus = "1.8"
persistent = "0.4"
pulldown-cmark = "0.1"
r2d2 = "0.8"
r2d2-diesel = "1.0"
reqwest = "0.8"
router = "0.6"
ruma-client-api = { git = "https://github.com/exul/ruma-client-api.git" }
ruma-events = { git = "https://github.com/exul/ruma-events.git" }
ruma-identifiers = { git = "https://github.com/exul/ruma-identifiers.git", features = ["diesel"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
slog = "2.1"
slog-async = "2.2"
slog-json = "2.2"
slog-term = "2.3"
slog-stream = "1.2"
url = "1.6"
yaml-rust = "0.4"

[dev-dependencies]
matrix_rocketchat_test = { path = "tests/matrix-rocketchat-test" }
tempdir = "0.3"
