[package]
name = "matrix_rocketchat_test"
version = "0.1.0"
authors = ["Andreas Brönnimann"]
license = "MIT OR Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
diesel = { version = "0.12", default-features = false, features = ["sqlite"] }
iron = "0.5"
lazy_static = "0.2"
matrix_rocketchat = { path = "../.." }
persistent = "0.3"
r2d2 = "0.7"
r2d2-diesel = "0.12"
rand = "0.3"
reqwest = "0.8"
router = "0.5"
ruma-client-api = { git = "https://github.com/exul/ruma-client-api.git" }
ruma-events = { git = "https://github.com/exul/ruma-events.git" }
ruma-identifiers = { git = "https://github.com/exul/ruma-identifiers.git", features = ["diesel"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.0"
slog-async = "2.1"
slog-json = "2.0"
slog-term = "2.2"
slog-stream = "1.2"
tempdir = "0.3"
