[package]
name = "matrix_rocketchat_test"
version = "0.1.0"
authors = ["Andreas Brönnimann"]
license = "MIT OR Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
diesel = { version = "1.0", default-features = false, features = ["sqlite"] }
iron = "0.6"
lazy_static = "1.0"
matrix_rocketchat = { path = "../.." }
persistent = "0.4"
r2d2 = "0.8"
r2d2-diesel = "1.0"
rand = "0.3"
reqwest = "0.8"
router = "0.6"
ruma-client-api = { git = "https://github.com/exul/ruma-client-api.git" }
ruma-events = { git = "https://github.com/exul/ruma-events.git" }
ruma-identifiers = { git = "https://github.com/exul/ruma-identifiers.git", features = ["diesel"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.1"
slog-async = "2.2"
slog-json = "2.2"
slog-term = "2.3"
slog-stream = "1.2"
tempdir = "0.3"
