[package]
name = "matrix_rocketchat_test"
version = "0.1.0"
authors = ["Andreas Brönnimann"]
license = "MIT OR Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
diesel = { version = "1.4", default-features = false, features = ["sqlite"] }
http = "0.1"
iron = "0.6"
lazy_static = "1.0"
matrix_rocketchat = { path = "../.." }
persistent = "0.4"
r2d2 = "0.8"
r2d2-diesel = "1.0"
rand = "0.4"
reqwest = "0.9"
router = "0.6"
ruma-client-api = { git = "https://github.com/exul/ruma-client-api.git" }
ruma-events = { version = "0.11" }
ruma-identifiers = { version = "0.11", features = ["diesel"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.2"
slog-async = "2.3"
slog-json = "2.2"
slog-term = "2.4"
slog-stream = "1.2"
tempdir = "0.3"
